refactor: remover import duplicado e limpar avisos no AtendimentoServiceTest